BACKLOG-20584: Fix scrollbar issue in the vanity url editing mode dia… (#104)
* BACKLOG-20584: Fix scrollbar issue in the vanity url editing mode dialog.

* BACKLOG-20584: Fix PR Feedbacks.

--- a/src/javascript/components/contentEditor/EditvanityUrlsDialog/EditVanityUrlsDialog.scss
+++ b/src/javascript/components/contentEditor/EditvanityUrlsDialog/EditVanityUrlsDialog.scss
@@ -73,3 +73,7 @@
 .actions {
   justify-content: flex-end !important;
 }
+
+.dialogOverflow div:first-child {
+  overflow: unset;
+}
